--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.57MB/s(Youtube:不良林), server: 38.143.66.20, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: 38.143.66.20, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-932.2KB/s(Youtube:不良林), server: 38.143.66.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-949.9KB/s(Youtube:不良林), server: 38.143.66.20, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇨🇳 中国-272.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.25MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
   - {name: 🇨🇦 加拿大-1.39MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-949.9KB/s(Youtube:不良林), server: 38.143.66.20, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-1.40MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-697.3KB/s(Youtube:不良林), server: 38.143.66.20, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇯🇵 日本-2.71MB/s(Youtube:不良林), server: 85.208.108.90, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇯🇵 日本-2.93MB/s(Youtube:不良林), server: 85.208.108.90, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇯🇵 日本-3.02MB/s(Youtube:不良林), server: 85.208.108.90, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇯🇵 日本-2.48MB/s(Youtube:不良林), server: 85.208.108.90, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇬🇧 英国-363.9KB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-932.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-949.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-272.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-949.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-697.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.48MB/s(Youtube:不良林)
+      - 🇬🇧 英国-363.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-932.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-949.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-272.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-949.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-697.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.48MB/s(Youtube:不良林)
+      - 🇬🇧 英国-363.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-932.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-949.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-272.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-949.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-697.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.48MB/s(Youtube:不良林)
+      - 🇬🇧 英国-363.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-932.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-949.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-272.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-949.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-697.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.48MB/s(Youtube:不良林)
+      - 🇬🇧 英国-363.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-932.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-949.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-272.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-949.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-697.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.48MB/s(Youtube:不良林)
+      - 🇬🇧 英国-363.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-932.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-949.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-272.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-949.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-697.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.48MB/s(Youtube:不良林)
+      - 🇬🇧 英国-363.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-932.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-949.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-272.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-949.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-697.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.48MB/s(Youtube:不良林)
+      - 🇬🇧 英国-363.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
