--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-2.25MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
-  - {name: 🇨🇦 加拿大-1.39MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-949.9KB/s(Youtube:不良林), server: 38.143.66.20, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-1.40MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-697.3KB/s(Youtube:不良林), server: 38.143.66.20, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇯🇵 日本-2.71MB/s(Youtube:不良林), server: 85.208.108.90, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇯🇵 日本-2.93MB/s(Youtube:不良林), server: 85.208.108.90, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇯🇵 日本-3.02MB/s(Youtube:不良林), server: 85.208.108.90, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇯🇵 日本-2.48MB/s(Youtube:不良林), server: 85.208.108.90, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇬🇧 英国-363.9KB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
+  - {name: 🇺🇸 美国-1.99MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.37MB/s(Youtube:不良林), server: 38.143.66.20, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-2.34MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-246.7KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇸🇬 新加坡-342.0KB/s(Youtube:不良林), server: sg-04.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-04.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-563.3KB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-343.0KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-358.2KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇸🇬 新加坡-365.5KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-500.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-949.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-697.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-363.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-246.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-342.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-563.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-365.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-500.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-2.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-949.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-697.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-363.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-246.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-342.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-563.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-365.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-500.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-949.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-697.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-363.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-246.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-342.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-563.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-365.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-500.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-2.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-949.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-697.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-363.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-246.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-342.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-563.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-365.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-500.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-949.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-697.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-363.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-246.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-342.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-563.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-365.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-500.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-2.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-949.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-697.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-363.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-246.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-342.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-563.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-365.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-500.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-2.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-949.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-697.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-363.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-246.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-342.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-563.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-365.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-500.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
