--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.99MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.37MB/s(Youtube:不良林), server: 38.143.66.20, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-2.34MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-246.7KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇸🇬 新加坡-342.0KB/s(Youtube:不良林), server: sg-04.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-04.licom.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-903.6KB/s(Youtube:不良林), server: 38.143.66.20, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇫🇷 法国-869.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 818, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.70MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-363.9KB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
+  - {name: 🇯🇵 日本-2.48MB/s(Youtube:不良林), server: 85.208.108.90, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇨🇦 加拿大-563.3KB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇳 中国-343.0KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-358.2KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-246.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-342.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-903.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-869.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇬🇧 英国-363.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.48MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-563.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-343.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-246.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-342.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-903.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-869.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇬🇧 英国-363.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.48MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-563.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-343.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-246.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-342.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-903.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-869.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇬🇧 英国-363.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.48MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-563.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-343.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-246.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-342.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-903.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-869.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇬🇧 英国-363.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.48MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-563.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-343.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-246.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-342.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-903.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-869.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇬🇧 英国-363.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.48MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-563.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-343.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-246.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-342.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-903.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-869.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇬🇧 英国-363.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.48MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-563.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-343.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-246.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-342.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-903.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-869.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇬🇧 英国-363.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.48MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-563.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-343.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
